cpp/inspireface/c_api/inspireface.h

#define HF_STATUS_ENABLE 1   
#define HF_STATUS_DISABLE 0  
#define HF_ENABLE_NONE 0x00000000              
#define HF_ENABLE_FACE_RECOGNITION 0x00000002  
#define HF_ENABLE_LIVENESS 0x00000004          
#define HF_ENABLE_IR_LIVENESS 0x00000008       
#define HF_ENABLE_MASK_DETECT 0x00000010       
#define HF_ENABLE_FACE_ATTRIBUTE 0x00000020    
#define HF_ENABLE_PLACEHOLDER_ 0x00000040      
#define HF_ENABLE_QUALITY 0x00000080           
#define HF_ENABLE_INTERACTION 0x00000100       
#define HF_ENABLE_FACE_POSE 0x00000200         
#define HF_ENABLE_FACE_EMOTION 0x00000400      
#define HF_C_API_LEVEL 2U
#define HF_SESSION_CONFIG_V2_VERSION 1U
#define HF_RESOURCE_PACK_INFO_VERSION 1U
#define HF_RESOURCE_PACK_TAG_CAPACITY 64U
#define HF_RESOURCE_PACK_VERSION_CAPACITY 64U
#define HF_RESOURCE_PACK_MAJOR_CAPACITY 64U
#define HF_RESOURCE_PACK_RELEASE_CAPACITY 64U
HYPER_CAPI_EXPORT extern HResult HFGetErrorMessage(HResult errorCode, HString buffer, HInt32 bufferSize,
                                                   HPInt32 requiredSize);
typedef enum HFImageFormat {
    HF_STREAM_RGB = 0,       
    HF_STREAM_BGR = 1,       
    HF_STREAM_RGBA = 2,      
    HF_STREAM_BGRA = 3,      
    HF_STREAM_YUV_NV12 = 4,  
    HF_STREAM_YUV_NV21 = 5,  
    HF_STREAM_I420 = 6,      
    HF_STREAM_GRAY = 7,      
} HFImageFormat;
typedef enum HFRotation {
    HF_CAMERA_ROTATION_0 = 0,    
    HF_CAMERA_ROTATION_90 = 1,   
    HF_CAMERA_ROTATION_180 = 2,  
    HF_CAMERA_ROTATION_270 = 3,  
} HFRotation;
typedef struct HFImageData {
    HPUInt8 data;          
    HInt32 width;          
    HInt32 height;         
    HFImageFormat format;  
    HFRotation rotation;   
} HFImageData, *PHFImageData;
typedef struct HFFaceAttributeResult {
    HInt32 num;          
    HPInt32 race;        
    HPInt32 gender;      
    HPInt32 ageBracket;  
} HFFaceAttributeResult, *PHFFaceAttributeResult;
HYPER_CAPI_EXPORT extern HResult HFGetFaceAttributeResult(HFSession session, PHFFaceAttributeResult results);
typedef struct HFFaceEmotionResult {
    HInt32 num;       
    HPInt32 emotion;  
} HFFaceEmotionResult, *PHFFaceEmotionResult;
HYPER_CAPI_EXPORT extern HResult HFGetFaceEmotionResult(HFSession session, PHFFaceEmotionResult result);
typedef struct HFInspireFaceVersion {
    HInt32 major;  
    HInt32 minor;  
    HInt32 patch;  
} HFInspireFaceVersion, *PHFInspireFaceVersion;
HYPER_CAPI_EXPORT extern HResult HFQueryInspireFaceVersion(PHFInspireFaceVersion version);
HYPER_CAPI_EXPORT extern HFStatus HFQueryCAPILevel(HFUInt32* apiLevel);
typedef enum HFComponentType {
    HF_COMPONENT_MNN = 0,
    HF_COMPONENT_INSPIRECV,
    HF_COMPONENT_EIGEN,
    HF_COMPONENT_SQLITE,
    HF_COMPONENT_SQLITE_VEC,
    HF_COMPONENT_NLOHMANN_JSON,
    HF_COMPONENT_OPENCV,
    HF_COMPONENT_TENSORRT,
    HF_COMPONENT_CUDA,
    HF_COMPONENT_RKNN,
    HF_COMPONENT_RGA,
    HF_COMPONENT_COREML,
    HF_COMPONENT_COUNT,
} HFComponentType;
typedef enum HFComponentVersionState {
    HF_COMPONENT_VERSION_DISABLED = 0,  
    HF_COMPONENT_VERSION_KNOWN = 1,     
    HF_COMPONENT_VERSION_UNKNOWN = 2,   
} HFComponentVersionState;
typedef struct HFComponentVersion {
    HInt32 major;
    HInt32 minor;
    HInt32 patch;
    HFComponentVersionState state;
} HFComponentVersion, *PHFComponentVersion;
HYPER_CAPI_EXPORT extern HResult HFQueryInspireFaceComponentVersion(HFComponentType component, PHFComponentVersion version);
HYPER_CAPI_EXPORT extern HResult HFQueryInspireFaceComponentVersions(HString buffer, HInt32 bufferSize, HPInt32 requiredSize);
HYPER_CAPI_EXPORT extern HResult HFQueryInspireFaceDiagnosticInformation(HString buffer, HInt32 bufferSize, HPInt32 requiredSize);
typedef struct HFInspireFaceExtendedInformation {
    HChar information[256];
} HFInspireFaceExtendedInformation, *PHFInspireFaceExtendedInformation;
HYPER_CAPI_EXPORT extern HResult HFQueryInspireFaceExtendedInformation(PHFInspireFaceExtendedInformation information);
typedef enum HFLogLevel {
    HF_LOG_NONE = 0,  
    HF_LOG_DEBUG,     
    HF_LOG_INFO,      
    HF_LOG_WARN,      
    HF_LOG_ERROR,     
    HF_LOG_FATAL      
} HFLogLevel;
HYPER_CAPI_EXPORT extern HResult HFSetLogLevel(HFLogLevel level);
HYPER_CAPI_EXPORT extern HResult HFLogDisable();
HYPER_CAPI_EXPORT extern HResult HFLogPrint(HFLogLevel level, HFormat format, ...);
HYPER_CAPI_EXPORT extern void HFDeBugImageStreamImShow(HFImageStream streamHandle);
HYPER_CAPI_EXPORT extern HResult HFDeBugImageStreamDecodeSave(HFImageStream streamHandle, HPath savePath);
HYPER_CAPI_EXPORT extern HResult HFDeBugShowResourceStatistics();
HYPER_CAPI_EXPORT extern HResult HFDeBugGetUnreleasedSessionsCount(HPInt32 count);
HYPER_CAPI_EXPORT extern HResult HFDeBugGetUnreleasedSessions(PHFSession sessions, HInt32 count);
HYPER_CAPI_EXPORT extern HResult HFDeBugGetUnreleasedStreamsCount(HPInt32 count);
HYPER_CAPI_EXPORT extern HResult HFDeBugGetUnreleasedStreams(PHFImageStream streams, HInt32 count);