cpp/inspireface/c_api/intypedef.h


typedef void*               HFImageStream;                    
typedef void**              PHFImageStream;                   
typedef void*               HFSession;                        
typedef void**              PHFSession;                       
typedef signed int			HInt32;                           
typedef signed int*			HPInt32;                          
typedef int32_t             HFStatus;                         
typedef uint32_t            HFUInt32;                         
typedef long                HResult;                          
typedef char*               HString;                          
typedef const char*         HPath;                            
typedef const char*         HFormat;                          
typedef char                HChar;                            