python/inspireface/modules/core/native.py


PHFFaceAttributeResult = POINTER(struct_HFFaceAttributeResult)# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1306

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1318
if _libs[_LIBRARY_FILENAME].has("HFGetFaceAttributeResult", "cdecl"):
    HFGetFaceAttributeResult = _libs[_LIBRARY_FILENAME].get("HFGetFaceAttributeResult", "cdecl")
    HFGetFaceAttributeResult.argtypes = [HFSession, PHFFaceAttributeResult]
    HFGetFaceAttributeResult.restype = HResult

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1333
class struct_HFFaceEmotionResult(Structure):
    pass

struct_HFFaceEmotionResult.__slots__ = [
    'num',
    'emotion',
]
struct_HFFaceEmotionResult._fields_ = [
    ('num', HInt32),
    ('emotion', HPInt32),
]

HFFaceEmotionResult = struct_HFFaceEmotionResult# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1333

PHFFaceEmotionResult = POINTER(struct_HFFaceEmotionResult)# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1333

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1341
if _libs[_LIBRARY_FILENAME].has("HFGetFaceEmotionResult", "cdecl"):
    HFGetFaceEmotionResult = _libs[_LIBRARY_FILENAME].get("HFGetFaceEmotionResult", "cdecl")
    HFGetFaceEmotionResult.argtypes = [HFSession, PHFFaceEmotionResult]
    HFGetFaceEmotionResult.restype = HResult

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1354
class struct_HFInspireFaceVersion(Structure):
    pass

struct_HFInspireFaceVersion.__slots__ = [
    'major',
    'minor',
    'patch',
]
struct_HFInspireFaceVersion._fields_ = [
    ('major', HInt32),
    ('minor', HInt32),
    ('patch', HInt32),
]

HFInspireFaceVersion = struct_HFInspireFaceVersion# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1354

PHFInspireFaceVersion = POINTER(struct_HFInspireFaceVersion)# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1354

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1364
if _libs[_LIBRARY_FILENAME].has("HFQueryInspireFaceVersion", "cdecl"):
    HFQueryInspireFaceVersion = _libs[_LIBRARY_FILENAME].get("HFQueryInspireFaceVersion", "cdecl")
    HFQueryInspireFaceVersion.argtypes = [PHFInspireFaceVersion]
    HFQueryInspireFaceVersion.restype = HResult

if _libs[_LIBRARY_FILENAME].has("HFQueryCAPILevel", "cdecl"):
    HFQueryCAPILevel = _libs[_LIBRARY_FILENAME].get("HFQueryCAPILevel", "cdecl")
    HFQueryCAPILevel.argtypes = [POINTER(HFUInt32)]
    HFQueryCAPILevel.restype = HFStatus

enum_HFComponentType = c_int

HF_COMPONENT_MNN = 0
HF_COMPONENT_INSPIRECV = 1
HF_COMPONENT_EIGEN = 2
HF_COMPONENT_SQLITE = 3
HF_COMPONENT_SQLITE_VEC = 4
HF_COMPONENT_NLOHMANN_JSON = 5
HF_COMPONENT_OPENCV = 6
HF_COMPONENT_TENSORRT = 7
HF_COMPONENT_CUDA = 8
HF_COMPONENT_RKNN = 9
HF_COMPONENT_RGA = 10
HF_COMPONENT_COREML = 11
HF_COMPONENT_COUNT = 12

HFComponentType = enum_HFComponentType

enum_HFComponentVersionState = c_int

HF_COMPONENT_VERSION_DISABLED = 0
HF_COMPONENT_VERSION_KNOWN = 1
HF_COMPONENT_VERSION_UNKNOWN = 2

HFComponentVersionState = enum_HFComponentVersionState

class struct_HFComponentVersion(Structure):
    pass

struct_HFComponentVersion.__slots__ = [
    'major',
    'minor',
    'patch',
    'state',
]
struct_HFComponentVersion._fields_ = [
    ('major', HInt32),
    ('minor', HInt32),
    ('patch', HInt32),
    ('state', HFComponentVersionState),
]

HFComponentVersion = struct_HFComponentVersion
PHFComponentVersion = POINTER(struct_HFComponentVersion)

if _libs[_LIBRARY_FILENAME].has("HFQueryInspireFaceComponentVersion", "cdecl"):
    HFQueryInspireFaceComponentVersion = _libs[_LIBRARY_FILENAME].get("HFQueryInspireFaceComponentVersion", "cdecl")
    HFQueryInspireFaceComponentVersion.argtypes = [HFComponentType, PHFComponentVersion]
    HFQueryInspireFaceComponentVersion.restype = HResult

if _libs[_LIBRARY_FILENAME].has("HFQueryInspireFaceComponentVersions", "cdecl"):
    HFQueryInspireFaceComponentVersions = _libs[_LIBRARY_FILENAME].get("HFQueryInspireFaceComponentVersions", "cdecl")
    HFQueryInspireFaceComponentVersions.argtypes = [HString, HInt32, HPInt32]
    HFQueryInspireFaceComponentVersions.restype = HResult

if _libs[_LIBRARY_FILENAME].has("HFQueryInspireFaceDiagnosticInformation", "cdecl"):
    HFQueryInspireFaceDiagnosticInformation = _libs[_LIBRARY_FILENAME].get("HFQueryInspireFaceDiagnosticInformation", "cdecl")
    HFQueryInspireFaceDiagnosticInformation.argtypes = [HString, HInt32, HPInt32]
    HFQueryInspireFaceDiagnosticInformation.restype = HResult

if _libs[_LIBRARY_FILENAME].has("HFGetErrorMessage", "cdecl"):
    HFGetErrorMessage = _libs[_LIBRARY_FILENAME].get("HFGetErrorMessage", "cdecl")
    HFGetErrorMessage.argtypes = [HResult, HString, HInt32, HPInt32]
    HFGetErrorMessage.restype = HResult

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1372
class struct_HFInspireFaceExtendedInformation(Structure):
    pass

struct_HFInspireFaceExtendedInformation.__slots__ = [
    'information',
]
struct_HFInspireFaceExtendedInformation._fields_ = [
    ('information', HChar * int(256)),
]

HFInspireFaceExtendedInformation = struct_HFInspireFaceExtendedInformation# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1372

PHFInspireFaceExtendedInformation = POINTER(struct_HFInspireFaceExtendedInformation)# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1372

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1379
if _libs[_LIBRARY_FILENAME].has("HFQueryInspireFaceExtendedInformation", "cdecl"):
    HFQueryInspireFaceExtendedInformation = _libs[_LIBRARY_FILENAME].get("HFQueryInspireFaceExtendedInformation", "cdecl")
    HFQueryInspireFaceExtendedInformation.argtypes = [PHFInspireFaceExtendedInformation]
    HFQueryInspireFaceExtendedInformation.restype = HResult

enum_HFLogLevel = c_int# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1391

HF_LOG_NONE = 0# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1391

HF_LOG_DEBUG = (HF_LOG_NONE + 1)# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1391

HF_LOG_INFO = (HF_LOG_DEBUG + 1)# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1391

HF_LOG_WARN = (HF_LOG_INFO + 1)# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1391

HF_LOG_ERROR = (HF_LOG_WARN + 1)# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1391

HF_LOG_FATAL = (HF_LOG_ERROR + 1)# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1391

HFLogLevel = enum_HFLogLevel# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1391

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1396
if _libs[_LIBRARY_FILENAME].has("HFSetLogLevel", "cdecl"):
    HFSetLogLevel = _libs[_LIBRARY_FILENAME].get("HFSetLogLevel", "cdecl")
    HFSetLogLevel.argtypes = [HFLogLevel]
    HFSetLogLevel.restype = HResult

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1401
if _libs[_LIBRARY_FILENAME].has("HFLogDisable", "cdecl"):
    HFLogDisable = _libs[_LIBRARY_FILENAME].get("HFLogDisable", "cdecl")
    HFLogDisable.argtypes = []
    HFLogDisable.restype = HResult

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1411
if _libs[_LIBRARY_FILENAME].has("HFLogPrint", "cdecl"):
    _func = _libs[_LIBRARY_FILENAME].get("HFLogPrint", "cdecl")
    _restype = HResult
    _errcheck = None
    _argtypes = [HFLogLevel, HFormat]
    HFLogPrint = _variadic_function(_func,_restype,_argtypes,_errcheck)

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1424
if _libs[_LIBRARY_FILENAME].has("HFDeBugImageStreamImShow", "cdecl"):
    HFDeBugImageStreamImShow = _libs[_LIBRARY_FILENAME].get("HFDeBugImageStreamImShow", "cdecl")
    HFDeBugImageStreamImShow.argtypes = [HFImageStream]
    HFDeBugImageStreamImShow.restype = None

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1436
if _libs[_LIBRARY_FILENAME].has("HFDeBugImageStreamDecodeSave", "cdecl"):
    HFDeBugImageStreamDecodeSave = _libs[_LIBRARY_FILENAME].get("HFDeBugImageStreamDecodeSave", "cdecl")
    HFDeBugImageStreamDecodeSave.argtypes = [HFImageStream, HPath]
    HFDeBugImageStreamDecodeSave.restype = HResult

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1451
if _libs[_LIBRARY_FILENAME].has("HFDeBugShowResourceStatistics", "cdecl"):
    HFDeBugShowResourceStatistics = _libs[_LIBRARY_FILENAME].get("HFDeBugShowResourceStatistics", "cdecl")
    HFDeBugShowResourceStatistics.argtypes = []
    HFDeBugShowResourceStatistics.restype = HResult

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1461
if _libs[_LIBRARY_FILENAME].has("HFDeBugGetUnreleasedSessionsCount", "cdecl"):
    HFDeBugGetUnreleasedSessionsCount = _libs[_LIBRARY_FILENAME].get("HFDeBugGetUnreleasedSessionsCount", "cdecl")
    HFDeBugGetUnreleasedSessionsCount.argtypes = [HPInt32]
    HFDeBugGetUnreleasedSessionsCount.restype = HResult

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1472
if _libs[_LIBRARY_FILENAME].has("HFDeBugGetUnreleasedSessions", "cdecl"):
    HFDeBugGetUnreleasedSessions = _libs[_LIBRARY_FILENAME].get("HFDeBugGetUnreleasedSessions", "cdecl")
    HFDeBugGetUnreleasedSessions.argtypes = [PHFSession, HInt32]
    HFDeBugGetUnreleasedSessions.restype = HResult

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1482
if _libs[_LIBRARY_FILENAME].has("HFDeBugGetUnreleasedStreamsCount", "cdecl"):
    HFDeBugGetUnreleasedStreamsCount = _libs[_LIBRARY_FILENAME].get("HFDeBugGetUnreleasedStreamsCount", "cdecl")
    HFDeBugGetUnreleasedStreamsCount.argtypes = [HPInt32]
    HFDeBugGetUnreleasedStreamsCount.restype = HResult

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 1493
if _libs[_LIBRARY_FILENAME].has("HFDeBugGetUnreleasedStreams", "cdecl"):
    HFDeBugGetUnreleasedStreams = _libs[_LIBRARY_FILENAME].get("HFDeBugGetUnreleasedStreams", "cdecl")
    HFDeBugGetUnreleasedStreams.argtypes = [PHFImageStream, HInt32]
    HFDeBugGetUnreleasedStreams.restype = HResult

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 27
HF_STATUS_ENABLE = 1

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 28
HF_STATUS_DISABLE = 0

HF_C_API_LEVEL = 2

HF_SESSION_CONFIG_V2_VERSION = 1

HF_RESOURCE_PACK_INFO_VERSION = 1

HF_RESOURCE_PACK_TAG_CAPACITY = 64

HF_RESOURCE_PACK_VERSION_CAPACITY = 64

HF_RESOURCE_PACK_MAJOR_CAPACITY = 64

HF_RESOURCE_PACK_RELEASE_CAPACITY = 64

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 30
HF_ENABLE_NONE = 0x00000000

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 31
HF_ENABLE_FACE_RECOGNITION = 0x00000002

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 32
HF_ENABLE_LIVENESS = 0x00000004

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 33
HF_ENABLE_IR_LIVENESS = 0x00000008

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 34
HF_ENABLE_MASK_DETECT = 0x00000010

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 35
HF_ENABLE_FACE_ATTRIBUTE = 0x00000020

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 36
HF_ENABLE_PLACEHOLDER_ = 0x00000040

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 37
HF_ENABLE_QUALITY = 0x00000080

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 38
HF_ENABLE_INTERACTION = 0x00000100

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 39
HF_ENABLE_FACE_POSE = 0x00000200

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 40
HF_ENABLE_FACE_EMOTION = 0x00000400

HFImageData = struct_HFImageData# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 123
